# data-engineering-workshop

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
dbt_project/: data.duckdb  dbt_project.yml  profiles.yml
dbt_project/models/: sources.yaml
dbt_project/models/gold/: new_info.sql
dbt_project/models/silver/: new.sql
de_workshop/: config.py  constants.py  extract.py  helpers.py
de_workshop/dags/: elt_dag.py
de_workshop/dags/task_groups/: dbt_taskgroup.py
docker/: .dockerignore  Dockerfile  docker-compose.yaml
docker/entrypoints/: start_airflow_webserver.sh  start_superset.sh
superset/: superset_config.py
